Liaison location produit

--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -4,6 +4,7 @@
   .form-inputs
     = f.input :date_debut
     = f.input :date_fin
+    = f.association :produit, label_method: :nom
 
   .form-actions
     = f.button :submit
