Add product image import, add rent controller

--- a/app/views/produits/show.html.haml
+++ b/app/views/produits/show.html.haml
@@ -16,6 +16,10 @@
   %b Ean:
   = @produit.ean
 
+%p
+  %b Image du produit:
+  = image_tag @produit.product_image.url
+
 = link_to 'Edit', edit_produit_path(@produit)
 \|
 = link_to 'Back', produits_path
