--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,11 @@
         .navbar-header
           %ul.nav.navbar-nav.navbar-left
             %li
-              = link_to('home', root_path)
+              = link_to('Accueil', root_path)
+            %li
+              = link_to('Produits', produits_path)
+            %li
+              = link_to('Locations', locations_path)
           %ul.nav.navbar-nav.navbar-right
             -if(!user_signed_in?)
               %li
@@ -24,8 +28,11 @@
                   = link_to('Profil', edit_user_registration_url)
               %li
                 = link_to('Sign out', destroy_user_session_url, method: :delete)
-
-
+        -if(current_admin_user)
+          .navbar-header
+            %ul.nav.navbar-nav.navbar-left
+              %li
+                = link_to('Accueil', root_path)
     %p.notice= notice
     %p.alert= alert
     = yield
