--- a/app/views/produits/_form.html.haml
+++ b/app/views/produits/_form.html.haml
@@ -5,8 +5,9 @@
     = f.input :nom
     = f.input :disponibilite
     = f.input :description
-    = f.input :image
     = f.input :ean
+
+    = f.input :product_image, as: :file
 
   .form-actions
     = f.button :submit
