--- a/inte-local/public/css/creative.css
+++ b/inte-local/public/css/creative.css
@@ -281,29 +281,33 @@ header .header-content .header-content-inner p {
     margin-bottom: 0;
 }
 
-.portfolio-box {
+.product-box {
     display: block;
     position: relative;
     margin: 0 auto;
     max-width: 650px;
 }
 
-.portfolio-box .portfolio-box-caption {
+.product-box .product-box-focus {
     display: block;
     position: absolute;
     bottom: 0;
-    width: 100%;
+    width: 70%;
+    margin:auto;
     height: 100%;
     text-align: center;
+    margin-left:15%;
     color: #fff;
     opacity: 0;
-    background: rgba(240,95,64,.9);
+    /*background-color: rgba(240,95,64,.9);*/
+    /*background-color:rgba(47,44,43,0.8);*/
+    background-color:rgba(68, 63, 61, 0.8);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
+.product-box .product-box-focus .product-box-focus-content {
     position: absolute;
     top: 50%;
     width: 100%;
@@ -311,32 +315,32 @@ header .header-content .header-content-inner p {
     transform: translateY(-50%);
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
+.product-box .product-box-focus .product-box-focus-content .project-category,
+.product-box .product-box-focus .product-box-focus-content .project-name {
     padding: 0 15px;
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
+.product-box .product-box-focus .product-box-focus-content .project-category {
     text-transform: uppercase;
     font-size: 14px;
     font-weight: 600;
 }
 
-.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
+.product-box .product-box-focus .product-box-focus-content .project-name {
     font-size: 18px;
 }
 
-.portfolio-box:hover .portfolio-box-caption {
+.product-box:hover .product-box-focus {
     opacity: 1;
 }
 
 @media(min-width:768px) {
-    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
+    .product-box .product-box-focus .product-box-focus-content .project-category {
         font-size: 16px;
     }
 
-    .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
+    .product-box .product-box-focus .product-box-focus-content .project-name {
         font-size: 22px;
     }
 }
@@ -502,9 +506,15 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #222;
+    background-color:#F2F2F0;
 }
 
-
-.img-comics{
+.img-product{
     max-width:70% !important;
+    margin:auto;
+    margin-bottom:15%;
+}
+
+.top-list{
+    padding: 50px 0;
 }
