true last version local

--- a/inte-local/public/css/creative.css
+++ b/inte-local/public/css/creative.css
@@ -297,9 +297,9 @@ header .header-content .header-content-inner p {
     margin:auto;
     height: 100%;
     text-align: center;
-    /*margin-left:20%;*/
     color: #fff;
     opacity: 0;
+    /*margin-left:20%;*/
     /*background-color: rgba(240,95,64,.9);*/
     /*background-color:rgba(47,44,43,0.8);*/
     background-color:rgba(68, 63, 61, 0.8);
@@ -334,6 +334,14 @@ header .header-content .header-content-inner p {
 
 .product-box:hover .product-box-focus {
     opacity: 1;
+}
+
+.product-box:hover .img-product{
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -ms-filter: blur(5px);
+    -o-filter: blur(5px);
+    filter: blur(5px);
 }
 
 @media(min-width:768px) {
