integration ruby home

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,1 +1,213 @@
-%h1 Bonjour
+%section.top-list
+	.container
+		.row
+			.col-lg-1
+			.col-lg-2.text-center{ :style => "font-weight: 500; font-size: 30px;" }
+				Top Livres
+			.col-lg-8
+
+%section.no-padding
+	.container-fluid
+		.row
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/comics/1.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/comics/2.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/comics/3.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/comics/4.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/comics/5.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/comics/6.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+%section.top-list
+	.container
+		.row
+			.col-lg-1
+			.col-lg-2.text-center{ :style => "font-weight: 500; font-size: 30px;" }
+				Top Films
+			.col-lg-8
+
+%section.no-padding
+	.container-fluid
+		.row
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/movies/1.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/movies/comics/2.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/movies/comics/3.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/movies/comics/4.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/movies/comics/5.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/movies/comics/6.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+
+%section.top-list
+	.container
+		.row
+			.col-lg-1
+			.col-lg-2.text-center{ :style => "font-weight: 500; font-size: 30px;" }
+				Top Musiques
+			.col-lg-8
+
+%section.no-padding
+	.container-fluid
+		.row
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/musics/1.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/musics/2.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/musics/3.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/musics/4.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/musics/5.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
+
+			.col-lg-4.col-sm-6
+				%a.product-box
+					%img{:src => "/images/musics/6.jpg"}.img-responsive.img-product
+					.product-box-focus
+						.product-box-focus-content
+							.project-category.text-faded
+								Ajouter
+							.project-name
+								Name
