--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,10 +12,9 @@
           %ul.nav.navbar-nav.navbar-left
             %li
               = link_to('Accueil', root_path)
-            %li
-              = link_to('Produits', produits_path)
-            %li
-              = link_to('Locations', locations_path)
+            - @types.each do |type|
+              %li
+                = link_to type.name, list_produits_type_path(type)
           %ul.nav.navbar-nav.navbar-right
             -if(!user_signed_in?)
               %li
@@ -28,11 +27,6 @@
                   = link_to('Profil', edit_user_registration_url)
               %li
                 = link_to('Sign out', destroy_user_session_url, method: :delete)
-        -if(current_admin_user)
-          .navbar-header
-            %ul.nav.navbar-nav.navbar-left
-              %li
-                = link_to('Accueil', root_path)
     = render_breadcrumbs :separator => ' / '
     %p.notice= notice
     %p.alert= alert
