--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,28 +6,27 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    .navbar.navbar-default
+    %nav#mainNav.navbar.navbar-default.navbar-fixed-top
       .container-fluid
         .navbar-header
-          %ul.nav.navbar-nav.navbar-left
-            %li
-              = link_to('Accueil', root_path)
-            - @types.each do |type|
-              %li
-                = link_to type.name, list_produits_type_path(type)
+          .navbar-brand.page-scroll
+            = link_to('Accueil', root_path)
+        #bs-example-navbar-collapse-1.collapse.navbar-collapse
           %ul.nav.navbar-nav.navbar-right
-            -if(!user_signed_in?)
-              %li
-                = link_to('Connexion', new_user_session_url)
-              %li
-                = link_to('Enregistrement', new_user_registration_url)
-            -else
-              %li
-                -if(current_user)
-                  = link_to('Profil', edit_user_registration_url)
-              %li
-                = link_to('Sign out', destroy_user_session_url, method: :delete)
-    = render_breadcrumbs :separator => ' / '
-    %p.notice= notice
-    %p.alert= alert
-    = yield
+            %li
+              %a
+                Les Films
+            %li
+              %a
+                Les Livres
+            %li
+              %a
+                Les Musiques
+      %header
+        .header-content
+          .header-content-inner
+            Home page
+
+      %p.notice= notice
+      %p.alert= alert
+      = yield
