--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,7 +12,7 @@
           .navbar-brand.page-scroll
             = link_to('Accueil', root_path)
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
-          %ul.nav.navbar-nav.navbar-right
+          %ul.nav.navbar-nav.navbar-center
             %li
               %a
                 Les Films
