--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -193,7 +193,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(../images/header.jpg);
+    background-image: url(/assets/header.jpg);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
