--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,7 +11,7 @@
 		.row
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/comics/1.jpg"}.img-responsive.img-product
+					=image_tag "comics/1.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -21,7 +21,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/comics/2.jpg"}.img-responsive.img-product
+					=image_tag "comics/2.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -31,7 +31,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/comics/3.jpg"}.img-responsive.img-product
+					=image_tag "comics/3.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -41,7 +41,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/comics/4.jpg"}.img-responsive.img-product
+					=image_tag "comics/4.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -51,7 +51,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/comics/5.jpg"}.img-responsive.img-product
+					=image_tag "comics/5.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -61,7 +61,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/comics/6.jpg"}.img-responsive.img-product
+					=image_tag "comics/6.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -82,7 +82,7 @@
 		.row
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/movies/1.jpg"}.img-responsive.img-product
+					=image_tag "movies/1.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -92,7 +92,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/movies/comics/2.jpg"}.img-responsive.img-product
+					=image_tag "movies/2.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -102,7 +102,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/movies/comics/3.jpg"}.img-responsive.img-product
+					=image_tag "movies/3.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -112,7 +112,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/movies/comics/4.jpg"}.img-responsive.img-product
+					=image_tag "movies/4.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -122,7 +122,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/movies/comics/5.jpg"}.img-responsive.img-product
+					=image_tag "movies/5.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -132,7 +132,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/movies/comics/6.jpg"}.img-responsive.img-product
+					=image_tag "movies/6.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -154,7 +154,7 @@
 		.row
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/musics/1.jpg"}.img-responsive.img-product
+					=image_tag "musics/1.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -164,7 +164,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/musics/2.jpg"}.img-responsive.img-product
+					=image_tag "musics/2.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -174,7 +174,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/musics/3.jpg"}.img-responsive.img-product
+					=image_tag "musics/3.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -184,7 +184,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/musics/4.jpg"}.img-responsive.img-product
+					=image_tag "musics/4.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -194,7 +194,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/musics/5.jpg"}.img-responsive.img-product
+					=image_tag "musics/5.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
@@ -204,7 +204,7 @@
 
 			.col-lg-4.col-sm-6
 				%a.product-box
-					%img{:src => "/images/musics/6.jpg"}.img-responsive.img-product
+					=image_tag "musics/6.jpg", class:"img-responsive img-product"
 					.product-box-focus
 						.product-box-focus-content
 							.project-category.text-faded
