--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,8 +24,8 @@
                   = link_to('Profil', edit_user_registration_url)
               %li
                 = link_to('Sign out', destroy_user_session_url, method: :delete)
-          = link_to "English", params.merge({:locale => :en})
-
+          = link_to "Français", params.merge({:locale => :fr}) 
+          = link_to "English", params.merge({:locale => :en}) 
 
     %p.notice= notice
     %p.alert= alert
