--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,13 +6,13 @@
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
   %body
-    .navbar.navbar-default
+    %nav#mainNav.navbar.navbar-default.navbar-fixed-top
       .container-fluid
         .navbar-header
-          %ul.nav.navbar-nav.navbar-left
-            %li
-              = link_to('home', root_path)
-          %ul.nav.navbar-nav.navbar-right
+          .navbar-brand.page-scroll
+            = link_to('Accueil', root_path)
+        #bs-example-navbar-collapse-1.collapse.navbar-collapse
+          %ul.nav.navbar-nav.navbar-center
             -if(!user_signed_in?)
               %li
                 = link_to('Connexion', new_user_session_url)
@@ -24,9 +24,14 @@
                   = link_to('Profil', edit_user_registration_url)
               %li
                 = link_to('Sign out', destroy_user_session_url, method: :delete)
-          = link_to "Français", params.merge({:locale => :fr}) 
-          = link_to "English", params.merge({:locale => :en}) 
+              %li  
+                = link_to "Français", params.merge({:locale => :fr}) 
+                = link_to "English", params.merge({:locale => :en}) 
 
+    %header
+      .header-content
+        .header-content-inner
+          Home page
     %p.notice= notice
     %p.alert= alert
     = yield
