Add icon flag + put it nicely in the header

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -569,3 +569,10 @@ body {
 .product_image img{
 	height: 300px;
 }
+
+.flagSection{
+    float:right !important;
+}
+.flagSection img{
+    height: 20px;
+}
