Rent links, comment control, product display

--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,10 +1,8 @@
-= simple_form_for(@comment) do |f|
+= simple_form_for [@produit, @comment] do |f|
   = f.error_notification
 
   .form-inputs
     = f.input :body
-    = f.input :user_id
-    = f.input :produit_id
 
   .form-actions
     = f.button :submit
