--- a/app/views/produits/show.html.haml
+++ b/app/views/produits/show.html.haml
@@ -1,5 +1,3 @@
-%p#notice= notice
-
 %p
   %b Nom:
   = @produit.nom
@@ -15,22 +13,26 @@
   %b Ean:
   = @produit.ean
 
-
+-if(@produit.disponibilite)
+  = link_to 'Rent this product', produit_rent_path(@produit)
+-else
+  %p This product isn't available for the moment
 
 %tbody
   - @comments_users.each do |comment|
     %tr
+
+      -# Commentaire
+      - @user = User.find(comment.user_id)
+      = @user.firstname
+      = @user.lastname
       %td= comment.body
-      %td= comment.user_id
-      %td= comment.produit_id
-      %td= link_to 'Show', comment
-      %td= link_to 'Edit', edit_comment_path(comment)
-      %td= link_to 'Destroy', comment, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
--if(@produit.disponibilite)
-  = link_to 'Locate this product', produit_locate_path(@produit)
--else
-  %p This product isn't available for the moment
-= link_to 'Back', produits_path
+      -# Si l'utilisateur connecté est celui qui à écrit le commentaire
+      -if(current_user && comment.user_id == current_user.id || current_user && current_user == admin_user)
+        %td= link_to 'Edit', edit_produit_comment_path(comment.produit, comment)
+        %td= link_to 'Destroy', [comment.produit, comment], method: :delete, :data => { :confirm => 'Are you sure?' }
 
-= render partial: "comments/form"
+-# Si l'utilisateur est connecté, on affiche le formulaire
+-if(user_signed_in?)
+  = render partial: "comments/form"
