--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,15 +13,23 @@
             = link_to('Accueil', root_path)
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
           %ul.nav.navbar-nav.navbar-center
-            %li
-              %a
-                Les Films
-            %li
-              %a
-                Les Livres
-            %li
-              %a
-                Les Musiques
+            - @types.each do |type|
+              -if (type.produits.size != 0)
+                %li
+                  = link_to type.name, list_produits_type_path(type)
+          %ul.nav.navbar-nav.navbar-right
+            -if(!user_signed_in?)
+              %li
+                = link_to('Connexion', new_user_session_url)
+              %li
+                = link_to('Enregistrement', new_user_registration_url)
+            -else
+              %li
+                -if(current_user)
+                  = link_to('Profil', edit_user_registration_url)
+              %li
+                = link_to('Sign out', destroy_user_session_url, method: :delete)
+
     %header
       .header-content
         .header-content-inner
