--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,8 +31,8 @@
               %li
                 = link_to('Sign out', destroy_user_session_url, method: :delete)
             %li
-              = @cart.id
-              //= link_to 'Panier', user_cart_url(current_user.id, @cart.id)
+              - unless session[:cart].nil?
+                = link_to 'Panier', cart_url(session[:cart])
     = render_breadcrumbs :separator => ' / '
     %p.notice= notice
     %p.alert= alert
