--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -31,8 +31,8 @@
               %li
                 = link_to('Sign out', destroy_user_session_url, method: :delete)
             %li
-              - unless session[:cart].nil?
-                = link_to 'Panier', cart_url(session[:cart])
+              - unless session[:cart_id].nil?
+                = link_to 'Panier', user_cart_url(session[:user_id], session[:cart_id])
     = render_breadcrumbs :separator => ' / '
     %p.notice= notice
     %p.alert= alert
