--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,12 +1,21 @@
 %h2 Sign up
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = f.error_notification
-  .form-inputs
-    = f.input :firstname, required: true, autofocus: true
-    = f.input :lastname, required: true
-    = f.input :email, required: true
-    = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length)
-    = f.input :password_confirmation, required: true
-  .form-actions
-    = f.button :submit, "Sign up"
+	= f.error_notification
+	.form-group.row
+		.col-sm-10
+			= f.input :firstname, required: true, autofocus: true
+	.form-group.row
+		.col-sm-10
+		= f.input :lastname, required: true
+	.form-group.row
+		.col-sm-10
+			= f.input :email, required: true
+    .form-group.row
+		.col-sm-10
+			= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length)
+	.form-group.row
+		.col-sm-10
+			= f.input :password_confirmation, required: true
+	.form-actions
+		= f.button :submit, "Sign up"
 = render "devise/shared/links"
