--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -3,10 +3,10 @@
 	= f.error_notification
 	.form-group.row
 		.col-sm-10
-			= f.input :firstname, required: true, autofocus: true, id: "test"
+			= f.input :firstname, required: true, autofocus: true
 	.form-group.row
 		.col-sm-10
-		= f.input :lastname, required: true
+			= f.input :lastname, required: true
 	.form-group.row
 		.col-sm-10
 			= f.input :email, required: true
