--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -15,5 +15,5 @@
 		.col-sm-10
 			= f.input :password_confirmation, required: true, placeholder: "Password confirmation", class:"form-control"
 	.form-actions
-		= f.button :submit, "Sign up"
+		= f.button :submit, "Sign up", class:"btn btn-primary center-block"
 = render "devise/shared/links"
