integration form sign in/up

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -3,7 +3,7 @@
 	= f.error_notification
 	.form-group.row
 		.col-sm-10
-			= f.input :firstname, required: true, autofocus: true, placeholder: "firstname", class:"form-control"
+			= f.input :firstname, required: true, autofocus: true, placeholder: "FirstName", class:"form-control"
 	.form-group.row
 		.col-sm-10
 			= f.input :lastname, required: true, placeholder: "LastName", class:"form-control"
