correction top form

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -24,9 +24,8 @@
 }
 
 form{
-	width:30%; 
-	margin:auto; 
-	margin-top: 20%; 
-	background-color:#ece9e9; 
+	width:40%; 
+	margin:auto;  
+	background-color:rgba(236,233,233, 0.8); 
 	border-radius:20px;
 }
