--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -40,7 +40,11 @@ form input[type=submit]{
 	border-radius: 7px;
 }
 
+form input[type=submit]:hover{
+	background-color:red !important;
+}
+
 .link-form{
 	text-align:center;
-	margin-top:10%;
+	margin-top:4%;
 }
