--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,19 +1,36 @@
-%h2 Sign up
-= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-	= f.error_notification
-	.form-group.row
-		.col-sm-10
-			= f.input :firstname, required: true, autofocus: true, placeholder: "FirstName", class:"form-control"
-	.form-group.row
-		.col-sm-10
-			= f.input :lastname, required: true, placeholder: "LastName", class:"form-control"
-	.form-group.row
-		.col-sm-10
-			= f.input :email, required: true, placeholder: "Email", class:"form-control"
-    
-	.form-group.row
-		.col-sm-10
-			= f.input :password_confirmation, required: true, placeholder: "Password confirmation", class:"form-control"
-	.form-actions
-		= f.button :submit, "Sign up", class:"btn btn-primary center-block"
-= render "devise/shared/links"
+.content
+	%h2 Sign up
+	= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+		= f.error_notification
+		.row{ :style => "margin-bottom:5%;" }
+		.form-group.row
+			.col-sm-1
+			.col-sm-10
+				= f.input :firstname, required: true, autofocus: true, placeholder: "FirstName", class:"form-control"
+			.col-sm-1
+		.form-group.row
+			.col-sm-1
+			.col-sm-10
+				= f.input :lastname, required: true, placeholder: "LastName", class:"form-control"
+			.col-sm-1
+		.form-group.row
+			.col-sm-1
+			.col-sm-10
+				= f.input :email, required: true, placeholder: "Email", class:"form-control"
+			.col-sm-1
+		.form-group.row
+			.col-sm-1
+			.col-sm-10
+				= f.input :password_confirmation, required: true, placeholder: "Password confirmation", class:"form-control"
+			.col-sm-1
+		.form-actions.row
+			.col-sm-1
+			.col-sm-10
+				= f.button :submit, "Sign up", class: "btn btn-primary center-block"
+			.col-sm-1
+		.form-group.row.link-form
+			.col-sm-3
+			.col-sm-6
+				= render "devise/shared/links"
+			.col-sm-3
+		.row{ :style => "margin-top:5%;" }
