--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,4 +1,5 @@
 .content:before{
+	top: 0;
 	left: 0;
 	right: 0;
 	z-index: -1;
@@ -21,6 +22,10 @@
 	z-index: 0;
 	/*margin-left: 20px;*/
 	/*margin-right: 20px;*/
+}
+
+h2{
+	margin-left:20%;
 }
 
 form{
