correction devise scss

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -45,9 +45,9 @@ form input[type=submit]{
 	border-radius: 7px;
 }
 
-form input[type=submit]:hover{
+/*form input[type=submit]:hover{
 	background-color:red !important;
-}
+}*/
 
 .link-form{
 	text-align:center;
