--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -190,6 +190,7 @@ aside {
 header {
     position: relative;
     width: 100%;
+    top: -2%;
     min-height: auto;
     text-align: center;
     color: #fff;
