--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,7 +8,7 @@
     .row
       .col-lg-1
       .col-lg-2.text-center{ :style => "font-weight: 500; font-size: 30px;" }
-        Top Livres
+        Notre Bibilothèque
       .col-lg-8
 
 - @types.each do |type|
