--- a/app/views/types/list_produits.html.haml
+++ b/app/views/types/list_produits.html.haml
@@ -1,14 +1,17 @@
-%tbody
-  - @produits.each do |produit|
+%table
+  %tbody
+    - @produits.each do |produit|
 
-    -# Produit
-    %tr
-      %td= produit.nom
-      %td= produit.disponibilite
-      %td= produit.description
-      %td= image_tag produit.product_image
-      %td= link_to 'Show', produit
-      -if(produit.disponibilite)
-        %td= render 'locations/form', produit: produit
-      -else
-        %p Not available
+      -# Produit
+      %tr
+        %td.name
+          = produit.nom
+        %td= produit.disponibilite
+        %td= produit.description
+        %td= image_tag produit.product_image
+        %td= link_to 'Show', produit
+        -if(produit.disponibilite > 0)
+          %td= render 'locations/form', produit: produit
+        -else
+          %td
+            %p Not available
