Mise a jour integration et fonctionnalité master

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -531,3 +531,10 @@ body {
 .top-list{
     padding: 50px 0;
 }
+
+.flagSection{
+    float:right !important;
+}
+.flagSection img{
+    height: 20px;
+}
