--- a/app/assets/stylesheets/produits.scss
+++ b/app/assets/stylesheets/produits.scss
@@ -61,3 +61,33 @@
 	font-size:18px;
 	font-weight: bold;
 }
+
+
+/***** End rent page ******/
+
+
+/***** Show Product ******/
+.avatar_comment{
+	max-height: 165px;
+}
+
+.avatar_comment img{
+	width: 100%;
+	border: 5px grey solid;
+	border-radius: 10px;
+}
+
+.texte_comment{
+	min-height: 165px;
+	background-color: lightgrey;
+	border-radius: 136px 0px 0px;
+}
+
+.texte_comment p{
+	min-height: 165px;
+	padding: 28px 0px 0px 123px;
+}
+
+.product_image img{
+	height: 300px;
+}
